fixed all Bugs reported by FindBugs